--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,17 @@ html, body {
     height: 100%;
     background: linear-gradient(135deg, #667eea, #764ba2);
     color: white;
+    overflow-x: hidden;
+}
+
+body {
+    overflow-y: auto;
 }
 
 #game-container {
     width: 95%;
     max-width: 1200px;
+    min-height: 100vh;
     margin: 0 auto;
     padding: 20px;
     display: flex;
@@ -81,7 +87,7 @@ button {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,200,0.1);
+    background: linear-gradient(135deg, #667eea, #764ba2);
     backdrop-filter: blur(14px);
     z-index: 2;
     display: flex;
@@ -185,7 +191,7 @@ button:hover, button:active {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: linear-gradient(135deg, #667eea, #764ba2);
+    background: linear-gradient(135deg, #667eea, #764ba2);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
@@ -228,5 +234,9 @@ button:hover, button:active {
 
     #overlay {
         padding-top: 5vh;
+    }
+    
+    p {
+        font-size: 30px;
     }
 }
